tests/pipeline/tests/snapshots/pipeline__bytecode_e70fa9571d6e171d15094ab9c6714b3e772e4f2922dcd5c890263bb86e785d15.snap
---
source: tests/pipeline/tests/pipeline.rs
assertion_line: 42
expression: "snapshots.join(\"\\n\\n\")"
---
chunk test (params=0, max_regs=8)
constants:
  [0] Int(0)
  [1] Int(3)
  [2] Int(1)
  [3] Null
code:
  0000 LOADK a=0 b=0 c=0
  0001 MOVE a=2 b=0 c=0
  0002 LOADK a=3 b=1 c=0
  0003 CMP_LT a=1 b=2 c=3
  0004 JIF a=1 b=5 c=0
  0005 MOVE a=4 b=1 c=0
  0006 LOADK a=5 b=2 c=0
  0007 ADD a=1 b=4 c=5
  0008 JMP a=0 b=248 c=255
  0009 MOVE a=6 b=0 c=0
  0010 RET a=6 b=0 c=0
  0011 LOADK a=7 b=3 c=0
  0012 RET a=7 b=0 c=0
