tests/pipeline/tests/snapshots/pipeline__bytecode_e7b1cc2492de7b499838007392b5dd239fbe2759de52087d5f16e128e5fc25ef.snap
---
source: tests/pipeline/tests/pipeline.rs
assertion_line: 42
expression: "snapshots.join(\"\\n\\n\")"
---
chunk test (params=0, max_regs=4)
constants:
  [0] Str("int")
  [1] Double(3.14)
  [2] Null
code:
  0000 LOADK a=1 b=0 c=0
  0001 LOADK a=2 b=1 c=0
  0002 CALL a=0 b=1 c=1
  0003 RET a=0 b=0 c=0
  0004 LOADK a=3 b=2 c=0
  0005 RET a=3 b=0 c=0
