tests/pipeline/tests/snapshots/pipeline__bytecode_f6c8bf7374db1d812d2af1118df8ec91dd6fc69269394c4b3efc06d30ac0d666.snap
---
source: tests/pipeline/tests/pipeline.rs
assertion_line: 42
expression: "snapshots.join(\"\\n\\n\")"
---
chunk test (params=0, max_regs=4)
constants:
  [0] Int(2)
  [1] Int(3)
  [2] Null
code:
  0000 LOADK a=1 b=0 c=0
  0001 LOADK a=2 b=1 c=0
  0002 ADD a=0 b=1 c=2
  0003 RET a=0 b=0 c=0
  0004 LOADK a=3 b=2 c=0
  0005 RET a=3 b=0 c=0
